2001-07-26  Glenn F. Maynard <g_ld@zewt.org>

	* CmdExec.cc, CmdExec.h, Job.cc, Makefile.am, commands.cc: queue
	  editing support (QueueFeeder class).

2001-07-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* FtpSplitList.cc: fix mem leak (reported by Glenn F. Maynard).
	* ftpclass.cc: break normal execution if Error().
	* Http.cc: workaround for range end ==-1.

2001-07-24  Glenn F. Maynard <g_ld@zewt.org>

	* FileAccess.cc: make url protocol case insensitive.

2001-07-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: fix CONNECT_VERIFY in case of borrowed connection.
	* commands.cc: check find -d argument for being a number.

2001-07-19  Glenn F. Maynard <g_ld@zewt.org>

	* FindJob.cc, FindJob.h, commands.cc: add find --maxdepth option.

2001-07-19  Glenn F. Maynard <g_ld@zewt.org>

	* CmdExec.cc, CmdExec.h, commands.cc: implement queue editing -
	  queue -s and queue -e commands.

2001-07-18  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: allow to choose AUTH argument;
	  ftp:ssl-auth new variable.

2001-07-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ResMgr.cc: make it compile with irix compiler.
	* FtpListInfo.cc: add MacWebStar parser.

2001-07-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: make it work without ssl.

2001-07-09  Glenn F. Maynard <glenn@zewt.org>

	* FileSet.cc, FileSet.h: speed-optimization using binary search.

2001-07-06  Alexander V. Lukyanov  <lav@yars.free.net>

	* misc.cc: little speed-optimization in squeeze_file_name.

2001-07-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, ftpclass.cc, ftpclass.h:
	  get rid of group/gpass.
	* Resolver.cc, netrc.cc, Fish.cc, Http.cc: use case-insensitive
	  hostname comparision.
	* Http.cc, Http.h: support CONNECT method for https over http proxy.

2001-07-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* Resolve.cc: update SRV support for RFC2782.